gitlab/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: gitlab-vs-webservice
  # namespace: tools
spec:
  gateways:
    - gitlab-gateway
  hosts:
    - "gitlab.rpolnx.local"
  # tcp:
  #   - match:
  #       - port: 443
  #     route:
  #       - destination:
  #           host: gitlab-webservice-default
  #           port:
  #             number: 8181
  http:
    - name: "gitlab-v1-webservice"
      match:
        - port: 80
        - port: 443
      route:
        - destination:
            host: gitlab-webservice-default
            port:
              number: 8181

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: gitlab-vs-minio
  # namespace: tools
spec:
  gateways:
    - gitlab-gateway
  hosts:
    - "minio.rpolnx.local"
  http:
    - name: "gitlab-v1-minio"
      route:
        - destination:
            host: gitlab-minio-svc
            port:
              number: 9000
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: gitlab-vs-registry
  # namespace: tools
spec:
  gateways:
    - gitlab-gateway
  hosts:
    - "registry.rpolnx.local"
  http:
    - name: "gitlab-v1-registry"
      route:
        - destination:
            host: gitlab-registry
            port:
              number: 5000
